feat: connection auth service
